Bug 516001 - Text Tool ignores locked status of hidden layers
Summary: Text Tool ignores locked status of hidden layers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 6.0.0-beta1
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-14 20:27 UTC by Vitamorus
Modified: 2026-03-11 11:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vitamorus 2026-02-14 20:27:47 UTC
SUMMARY
When a layer is hidden, other tools in Krita will treat it as locked and refuse to draw on the hidden layer. The new Text Tool does not follow this behavior.

STEPS TO REPRODUCE
1. Create a new document and select the Text Tool
2. Add a new vector layer, select it and toggle it's visibility to 'hidden'
3. Click on the canvas a few times
4. Unhide the vector layer to reveal that placeholder text objects have been added
Comment 1 Bug Janitor Service 2026-03-10 11:33:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2689
Comment 2 wolthera 2026-03-11 11:44:58 UTC
Git commit 4ddea07e2e8c8a27c08659320c69afd1c37ad90a by Wolthera van Hövell.
Committed on 11/03/2026 at 11:44.
Pushed by woltherav into branch 'master'.

Allow SVG text tool to check whether it can edit the layer.

M  +1    -12   libs/ui/tool/kis_tool.cc
M  +20   -0    libs/ui/tool/kis_tool_utils.cpp
M  +8    -0    libs/ui/tool/kis_tool_utils.h
M  +19   -0    plugins/tools/svgtexttool/SvgTextTool.cpp
M  +7    -0    plugins/tools/svgtexttool/SvgTextTool.h

https://invent.kde.org/graphics/krita/-/commit/4ddea07e2e8c8a27c08659320c69afd1c37ad90a
Comment 3 wolthera 2026-03-11 11:45:20 UTC
Git commit 950c896078118fa1325fe80f2a86a317f9b0a51f by Wolthera van Hövell.
Committed on 11/03/2026 at 11:45.
Pushed by woltherav into branch 'krita/6.0'.

Allow SVG text tool to check whether it can edit the layer.


(cherry picked from commit 4ddea07e2e8c8a27c08659320c69afd1c37ad90a)

1257d3b5 Allow SVG text tool to check whether it can edit the layer.
b9654cb1 Fix identation, add a little bit of documentation.

Co-authored-by: Wolthera van Hövell <griffinvalley@gmail.com>

M  +1    -12   libs/ui/tool/kis_tool.cc
M  +20   -0    libs/ui/tool/kis_tool_utils.cpp
M  +8    -0    libs/ui/tool/kis_tool_utils.h
M  +19   -0    plugins/tools/svgtexttool/SvgTextTool.cpp
M  +7    -0    plugins/tools/svgtexttool/SvgTextTool.h

https://invent.kde.org/graphics/krita/-/commit/950c896078118fa1325fe80f2a86a317f9b0a51f