Allow SVG text tool to check whether it can edit the layer.

BUG:516001